--- a/6. ciudadesCRUD/src/main/resources/templates/form.html
+++ b/6. ciudadesCRUD/src/main/resources/templates/form.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Formulario</h1>
-        <a href="/">Volver</a>
+        <a href="@{/ciudades}">Volver</a>
         <form th:action="@{/guardar}" method="post" th:object="${ciudad}">
             <input type="hidden" name="id" th:field="*{id}" />
             <input type="text" id="nombre" name="nombre" placeholder="Ingrese el Nombre" th:field="*{nombre}">
