--- a/7. NewApp/src/main/resources/templates/ciudades/form.html
+++ b/7. NewApp/src/main/resources/templates/ciudades/form.html
@@ -1,3 +1,19 @@
 <div th:fragment="ciudadesform">
     <h1>FORMULARIO</h1>
 </div>
+
+<html xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <title>Inicio</title>
+        <meta charset="UTF-8">
+    </head>
+    <body th:fragment="ciudadesform">
+        <h1>Formulario</h1>
+        <a href="/">Volver</a>
+        <form th:action="@{/guardar}" method="post" th:object="${ciudad}">
+            <input type="hidden" name="id" th:field="*{id}" />
+            <input type="text" id="nombre" name="nombre" placeholder="Ingrese el Nombre" th:field="*{nombre}">
+            <button type="submit">Enviar</button>
+        </form>
+    </body>
+</html>
