--- a/7. NewApp/src/main/resources/templates/ciudades/lista.html
+++ b/7. NewApp/src/main/resources/templates/ciudades/lista.html
@@ -5,7 +5,7 @@
                 <h2>Ciudades <small class="text-muted">de Itapúa</small></h2>
             </div>
             <div class="p-2 flex-shrink-1 bd-highlight">
-                <a href="/nuevo" type="button" class="btn btn-primary">Nuevo</a>
+                <a th:href="@{nuevo}" type="button" class="btn btn-primary">Nuevo</a>
             </div>
         </div>
         <table class="table">
@@ -22,8 +22,8 @@
                 <tr th:each="c: ${ciudades}">
                     <td th:text="${c.id}"></td>
                     <td th:text="${c.nombre}"></td>
-                    <td><a th:href="@{/editar/}+${c.id}" type="button" class="btn btn-warning">Editar</a></td>
-                    <td><a th:href="@{/borrar/}+${c.id}"  type="button" class="btn btn-danger" >Borrar</a></td>
+                    <td><a th:href="@{/ciudades/editar/}+${c.id}" type="button" class="btn btn-warning">Editar</a></td>
+                    <td><a th:href="@{/ciudades/borrar/}+${c.id}"  type="button" class="btn btn-danger" >Borrar</a></td>
                 </tr>
             </tbody>
         </table>
