--- a/8. Proyecto Comercio Electronico/src/main/resources/templates/index.html
+++ b/8. Proyecto Comercio Electronico/src/main/resources/templates/index.html
@@ -10,20 +10,24 @@
     <body>
         <!-- HEADER -->
         <div th:insert="fragments/nav :: nav"></div>
-        <div class="container" style="min-height: 100vh">
-            <!<!-- CONTENEDOR -->
-            <div class="text-light" style="background-image: url('https://static.vecteezy.com/system/resources/previews/012/202/120/large_2x/mobile-phone-in-electronic-store-interior-with-customer-abstract-blurred-background-photo.jpg');
+        <div class="container" style="height: 100vh">
+            <!-- CONTENEDOR -->
+            <div class="text-light fondito"
+                 style="background-image: url('https://img.freepik.com/premium-vector/e-commerce-design-white-background-vector-illustration_24908-48554.jpg?w=740');
+
+                 background-repeat: no-repeat;
+                 background-position: center;
+                 background-position-y: 90px;
                  position: absolute;
                  left: 0;
                  top: 0;
                  opacity: 0.7;
                  z-index: -1;
-                 height: 100vh;
-                 min-width: 100vw;
-                 background-size: cover;">
+                 height: calc(100vh - 50px); /* Adjust the value to your needs */
+                 min-width: 100vw;">
             </div>
-            <!--DIV CENTRAL -->
-            <div class="container mt-4" style="background-color: rgba(255, 255, 255, 0.7);
+            <!-- DIV CENTRAL -->
+            <div class="container mt-10" style="background-color: rgba(255, 255, 255, 0.7);
                  display: flex;
                  padding: 15px;
                  flex-direction: column;
