--- a/8. Proyecto Comercio Electronico/src/main/resources/templates/fragments/nav.html
+++ b/8. Proyecto Comercio Electronico/src/main/resources/templates/fragments/nav.html
@@ -10,10 +10,9 @@
             <div class="navbar-nav w-100">
                 <a class="navbar-brand text-color" href="/"></i>Grupo3 Store</a>
             </div>
-            <div style="width: 700px; display: flex; justify-content: space-around">
+            <div style="width: 1200px; display: flex; justify-content: space-around">
                 <a href="/productos" class="btn btn-success btn-lg mt-6">Stock</a>
-                <a href="/new-user" class="btn btn-success btn-lg mt-6">Nuevo Usuario</a>
-                <a href="/new-empresa" class="btn btn-success btn-lg mt-6">Nueva Empresa</a>
+                <a href="/admin-panel" class="btn btn-success btn-lg mt-6">Admin Panel</a>
             </div>
         </nav>
     </body>
