--- a/8. Proyecto Comercio Electronico/src/main/resources/templates/index.html
+++ b/8. Proyecto Comercio Electronico/src/main/resources/templates/index.html
@@ -14,7 +14,6 @@
             <!-- CONTENEDOR -->
             <div class="text-light fondito"
                  style="background-image: url('https://img.freepik.com/premium-vector/e-commerce-design-white-background-vector-illustration_24908-48554.jpg?w=740');
-
                  background-repeat: no-repeat;
                  background-position: center;
                  background-position-y: 90px;
@@ -23,7 +22,7 @@
                  top: 0;
                  opacity: 0.7;
                  z-index: -1;
-                 height: calc(100vh - 50px); /* Adjust the value to your needs */
+                 height: calc(100vh - 50px);
                  min-width: 100vw;">
             </div>
             <!-- DIV CENTRAL -->
