--- a/8. Proyecto Comercio Electronico/src/main/resources/templates/newempresa.html
+++ b/8. Proyecto Comercio Electronico/src/main/resources/templates/newempresa.html
@@ -59,13 +59,13 @@
                         </div>
                     </div>
                     <div class="modal-footer" style="display: flex; justify-content: space-evenly">
-                        <button
+                        <a
                             type="button"
                             class="btn btn-secondary"
-                            data-dismiss="modal"
+                            href="/admin-panel"
                             >
                             Cerrar
-                        </button>
+                        </a>
                         <button type="submit" class="btn btn-success" value="Submit">
                             Guardar cambios
                         </button>
