Fixed bottom margin

--- a/8. Proyecto Comercio Electronico/src/main/resources/templates/adminpanel.html
+++ b/8. Proyecto Comercio Electronico/src/main/resources/templates/adminpanel.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div th:insert="fragments/nav :: nav" style="margin-bottom: 50px"></div>
-        <div>
+        <div style="margin-bottom: 50px">
             <div style="display: flex; justify-content: center">
                 <h1>Admin Panel view</h1>
             </div>
@@ -60,6 +60,7 @@
                     </tbody>
                 </table>      
             </div>
-            <div th:insert="fragments/footer"></div>
+        </div>
+        <div th:insert="fragments/footer"></div>
     </body>
 </html>
