--- a/8. Proyecto Comercio Electronico/src/main/resources/templates/fragments/nav.html
+++ b/8. Proyecto Comercio Electronico/src/main/resources/templates/fragments/nav.html
@@ -8,7 +8,7 @@
     <body>
         <nav th:fragment="nav" class="navbar navbar-expand navbar-dark pl-5" style="background-color: #191e57; border-bottom: 2px solid black; padding: 15px">
             <div class="navbar-nav w-100">
-                <a class="navbar-brand text-color" href="/"></i>Grupo3 Store</a>
+                <a class="navbar-brand text-color" href="/"></i>Tienda del Grupo3</a>
             </div>
             <div style="width: 1200px; display: flex; justify-content: space-around">
                 <a href="/productos" class="btn btn-success btn-lg mt-6">Stock</a>
