--- a/8. Proyecto Comercio Electronico/src/main/resources/templates/adminpanel.html
+++ b/8. Proyecto Comercio Electronico/src/main/resources/templates/adminpanel.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}">
     </head>
     <body>
-        <div th:insert="fragments/nav :: nav" style="margin-bottom: 50px"></div>
-        <div style="margin-bottom: 50px">
+        <div th:insert="fragments/nav :: nav" style="margin-bottom: 70px"></div>
+        <div style="margin-bottom: 70px">
             <div style="display: flex; justify-content: center">
-                <h1>Admin Panel view</h1>
+                <h1>Vista de Panel de Admin</h1>
             </div>
             <div class="container h-100" style="display: flex; flex-direction: column; align-items: center; min-height: 100vh">
                 <br>
