--- a/8. Proyecto Comercio Electronico/src/main/resources/templates/newempresa.html
+++ b/8. Proyecto Comercio Electronico/src/main/resources/templates/newempresa.html
@@ -11,17 +11,17 @@
         <div th:insert="fragments/nav :: nav" style="margin-bottom: 70px"></div>
         <!--NUEVA EMPRESA FORM-->
         <div id="createProductoModal">
-            <div style="display: flex; justify-content: space-evenly;">
+            <div style="display: flex; justify-content: space-evenly; margin-bottom: 35px">
                 <h3>Crear una nueva empresa</h3>
             </div>
-            <div class="container h-100" style="display: flex; flex-direction: column; align-items: center; min-height: 100vh">
+            <div class="container h-100 mb-5" style="display: flex; flex-direction: column; align-items: center; min-height: 100vh">
                 <form
                     action="#"
                     th:action="@{/empresas-submit}"
                     th:object="${empresa}"
                     method="post"
                     >
-                    <div class="form-group row" style="display: flex; justify-content: space-between">
+                    <div class="form-group row" style="display: flex; justify-content: space-between; width: 600px">
                         <label for="nombre" class="col-2 col-form-label"
                                >Nombre</label
                         >
@@ -31,6 +31,7 @@
                                 id="nombre"
                                 name="nombre"
                                 th:field="*{nombre}"
+                                placeholder="Escriba su nombre"
                                 />
                         </div>
                     </div>
@@ -44,6 +45,7 @@
                                 id="direccion"
                                 name="direccion"
                                 th:field="*{direccion}"
+                                placeholder="Escriba la dirección de su empresa aquí"
                                 />
                         </div>
                     </div>
@@ -55,7 +57,9 @@
                                 id="tel"
                                 name="tel"
                                 th:field="*{tel}"
+                                placeholder="Escriba el teléfono de su empresa"
                                 />
+                                
                         </div>
                     </div>
                     <div class="modal-footer" style="display: flex; justify-content: space-evenly">
